--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -17,15 +17,14 @@
   <%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new-2" %>
 </div>
 
-<!-- Page Content -->
+
 <div class="content">
     <!-- Dynamic Table Simple -->
     <div class="block">
         <div class="block-header">
         <div class="block-content table-responsive">
             <table class="table table-striped js-dataTable-full-pagination">
-                
-
+              <div style="font-size:20px;color:#586ac5"><b>Guestlists</b></div>
               <table>
                 <thead>
                   <tr>
@@ -41,6 +40,38 @@
                       <td><%= link_to guestlist.event.title, guestlist_path(guestlist.id) if guestlist.event %> (<%= guestlist.guests.count %>)</td>
                       <td><%= link_to 'Edit', edit_guestlist_path(guestlist), :class=>'btn btn-xs btn-default' %></td>
                       <td><%= link_to 'Delete', guestlist, method: :delete, data: { confirm: 'Are you sure?' }, :class=>'btn btn-xs btn-default' %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </table>
+        </div>
+    </div> 
+</div>
+
+
+<div class="content">
+    <!-- Dynamic Table Simple -->
+    <div class="block">
+        <div class="block-header">
+        <div class="block-content table-responsive">
+            <table class="table table-striped js-dataTable-full-pagination">
+              <div style="font-size:20px;color:#586ac5"><b>Events</b></div>
+              <table>
+                <thead>
+                  <tr>
+                    <th>Date:</th>
+                    <th>Event:</th>
+                    <th colspan="3"></th>
+                </thead>
+
+                <tbody>
+                  <% @events.each do |event| %>
+                    <tr>
+                      <td><%= event.date %></td>
+                      <td><%= event.title %></td>
+                      <td><%= link_to 'Edit', edit_event_path(event), :class=>'btn btn-xs btn-default' %></td>
+                      <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' }, :class=>'btn btn-xs btn-default' %></td>
                     </tr>
                   <% end %>
                 </tbody>
