login page design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -267,7 +267,7 @@
         <!-- Page -->
         <div class="page animsition" data-animsition-in="fade-in" data-animsition-out="fade-out">
             <div class="page-content">
-                <div style="color:#fff" class="front-phrase"><h1>Disruptive Event Marketing</h1></div>
+                <div style="color:#fff" class="front-phrase"><h1>Disrupting Event Marketing</h1></div>
                 <div class="page-login-main">
                     <div class="brand visible-xs">
                         <a class="h3 text-white" href="index.html">
