--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -238,7 +238,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title><%= yield(:title) %> | ExclusiveAI</title>
+        <title><%= yield(:title) %>Tekuila</title>
 
         <meta name="description" content="VENUE CONVERSATIONAL MARKETING">
         <meta name="author" content="JONAS PREISLER">
