more front page design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -267,7 +267,8 @@
         <!-- Page -->
         <div class="page animsition" data-animsition-in="fade-in" data-animsition-out="fade-out">
             <div class="page-content">
-                <div style="color:#fff" class="front-phrase"><h1>Disrupting Event Marketing</h1></div>
+                <div style="color:#fff" class="front-phrase"><h1>Disrupting Event Marketing</h1><br><%= link_to 'Log In', new_user_session_path %> | <%= link_to 'Sign Up', new_user_registration_path %></div>
+
                 <div class="page-login-main">
                     <div class="brand visible-xs">
                         <a class="h3 text-white" href="index.html">
