fjernede ambassadors i menuen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,19 +62,14 @@
                                     <% end %>
                                 </li>   
                                 <li>
-                                    <%= link_to ambassadors_path do %>
-                                        <i class="si si-user"></i>AMBASSADORS
-                                    <% end %>
-                                </li> 
-                                <li>
                                     <%= link_to tablebookings_path do %>
-                                        <i class="si si-user"></i>TABLEBOOKINGS
+                                        <i class="si si-tag"></i>TABLEBOOKINGS
                                     <% end %>
                                 </li> 
 
                                 <li>
                                     <%= link_to tables_path do %>
-                                        <i class="si si-user"></i>TABLES
+                                        <i class="si si-layers"></i>TABLES
                                     <% end %>
                                 </li> 
                                 <li class="nav-main-heading"><span class="sidebar-mini-hide">Settings Area</span></li>   
@@ -163,10 +158,10 @@
             <!-- Footer -->
             <footer id="page-footer" class="content-mini content-mini-full font-s12 bg-gray-lighter clearfix">
                 <div class="pull-right">
-                    <i class="fa fa-heart text-city"></i> by <a class="font-w600" href="https://facebook.com/digitalspartanpage" target="_blank"> Jonas Preisler</a>
+                    <i class="fa fa-heart text-city"></i> by <a class="font-w600" href="https://www.jonaspreisler.com" target="_blank"> Jonas Preisler</a>
                 </div>
                 <div class="pull-left">
-                    <a class="font-w600" href="" target="_blank">Messenger Chatbots</a> &copy; <span><%= Time.current.year %></span>
+                    <a class="font-w600" href="" target="_blank">Tekuila</a> &copy; <span><%= Time.current.year %></span>
                 </div>
             </footer>
             <!-- END Footer -->
