--- a/app/views/tablebookings/show.html.erb
+++ b/app/views/tablebookings/show.html.erb
@@ -1,4 +1,21 @@
 <p style="font-size:26px">
+
+<div class="content">
+    <div class="row items-push">
+        <div class="col-sm-7">
+            <h1 class="page-heading animated zoomIn">
+                Tablebookings
+            </h1>
+        </div>
+        <div class="col-sm-5 text-right hidden-xs">
+            <ol class="breadcrumb push-10-t">
+                <li><%= link_to 'Tablebookings', tablebookings_path, class: "link-effect" %></li>
+                <li><a class="link-effect" href="">Tablebooking</a></li>
+            </ol>
+        </div>
+    </div>
+  <%= link_to 'View All Tablebookings', tablebookings_path, class: "btn btn-xl btn-default button-new" %>
+</div>
 <div class="content">
     <!-- Dynamic Table Simple -->
     <div class="block">
