--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,7 +7,7 @@
 <div class="content bg-image overflow-hidden" style="background-image: url('<%= asset_path('dashboard.jpg') %>');">
     <div class="push-50-t push-15">
         <h1 class="h2 text-white animated zoomIn">Dashboard</h1>
-        <h2 class="h5 text-white-op animated zoomIn">Welcome Club Owner</h2>
+        <h2 class="h5 text-white-op animated zoomIn">Welcome</h2>
     </div>
 </div>
 <!-- END Page Header -->
@@ -31,9 +31,9 @@
             <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @guestlists %></a>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <div class="font-w700 text-gray-darker animated fadeIn">ambassadors</div>
+            <div class="font-w700 text-gray-darker animated fadeIn">Tablebookings</div>
             <div class="text-muted animated fadeIn"><small><i class="si si-users"></i> Total</small></div>
-            <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @ambassadors %></a>
+            <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @tablebookings %></a>
         </div>
     </div>
 </div>
