--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -27,12 +27,12 @@
         </div>
         <div class="col-xs-6 col-sm-3">
             <div class="font-w700 text-gray-darker animated fadeIn">Guestlists</div>
-            <div class="text-muted animated fadeIn"><small><i class="si si-calendar"></i> Total</small></div>
+            <div class="text-muted animated fadeIn"><small><i class="si si-list"></i> Total</small></div>
             <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @guestlists %></a>
         </div>
         <div class="col-xs-6 col-sm-3">
             <div class="font-w700 text-gray-darker animated fadeIn">Tablebookings</div>
-            <div class="text-muted animated fadeIn"><small><i class="si si-users"></i> Total</small></div>
+            <div class="text-muted animated fadeIn"><small><i class="si si-tag"></i> Total</small></div>
             <a class="h2 font-w300 text-primary animated flipInX" href="">+<%= @tablebookings %></a>
         </div>
     </div>
