--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-
-<div class="content bg-gray-lighter">
+<div class="content">
     <div class="row items-push">
         <div class="col-sm-7">
             <h1 class="page-heading animated zoomIn">
@@ -10,17 +8,19 @@
                 <td><%= @event.date %></td>
             </h1>
         </div>
-        <%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new-2" %>
-
         <div class="col-sm-5 text-right hidden-xs">
             <ol class="breadcrumb push-10-t">
-                <li>Dashboard</li>
-                <li><a class="link-effect" href="">Guest</a></li>
+                <li><%= link_to 'Dashboard', root_path %></li>
+                <li><a class="link-effect" href="">Events</a></li>
             </ol>
         </div>
     </div>
+  <%= link_to 'Edit Event', edit_event_path, class: "btn btn-xl btn-default button-new" %>
+  <%= link_to 'New Guestlist', new_guestlist_path, class: "btn btn-xl btn-default button-new-2" %>
+  <%= link_to 'New Guest', new_guest_path, class: "btn btn-xl btn-default button-new-3" %>
 </div>
-<!-- END Page Header -->
+
+
 
 <!-- Page Content -->
 <div class="content">
@@ -32,14 +32,13 @@
                 
                 <% @guestlists.each do |guestlists| %>
 
-                  <p>
+                  <p style="font-size:20px">
                     <strong>List:</strong>
-                    <%= link_to guestlists.ambassador.name, guestlists if guestlists.ambassador %> (<%= guestlists.guests.count %>)
+                    <%= link_to guestlists.ambassador.name, guestlists if guestlists.ambassador %> 
+                    <%= link_to guestlists.id if guestlists %>  (<%= guestlists.guests.count %> guests)
                   </p>
                 <% end %>
               <br>
-
-              <%= link_to 'New Guest', new_guest_path %>
             </table>
         </div>
     </div> 
