--- a/app/views/guestlists/index.html.erb
+++ b/app/views/guestlists/index.html.erb
@@ -69,7 +69,7 @@
                   <% @events.each do |event| %>
                     <tr>
                       <td><%= event.date %></td>
-                      <td><%= event.title %></td>
+                      <td><%= link_to event.title, event_path(event.id) %></td>
                       <td><%= link_to 'Edit', edit_event_path(event), :class=>'btn btn-xs btn-default' %></td>
                       <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' }, :class=>'btn btn-xs btn-default' %></td>
                     </tr>
