--- a/app/views/guestlists/show.html.erb
+++ b/app/views/guestlists/show.html.erb
@@ -14,6 +14,7 @@
             </ol>
         </div>
     </div>
+  <%= link_to 'Back To Events', events_path, class: "btn btn-xl btn-default button-new" %>
 </div>
 
 <div class="content">
